err/jalon.intracursus.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jalon'...
Listing './lib/python3.5/site-packages/jalon/intracursus'...
Listing './lib/python3.5/site-packages/jalon/intracursus/browser'...
Listing './lib/python3.5/site-packages/jalon/intracursus/browser/scripts'...
Listing './lib/python3.5/site-packages/jalon/intracursus/browser/templates'...
Listing './lib/python3.5/site-packages/jalon/intracursus/content'...
Compiling './lib/python3.5/site-packages/jalon/intracursus/content/jalon_intracursus.py'...
***   File "./lib/python3.5/site-packages/jalon/intracursus/content/jalon_intracursus.py", line 81
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jalon/intracursus/profiles'...
Listing './lib/python3.5/site-packages/jalon/intracursus/profiles/default'...
Listing './lib/python3.5/site-packages/jalon/intracursus/skins'...
Listing './lib/python3.5/site-packages/jalon/intracursus/skins/jalon_intracursus'...
Listing './lib/python3.5/site-packages/jalon.intracursus-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
